tests/ui/transmute-mut-dst-not-intobytes.stable.stderr
error[E0277]: the trait bound `Dst: IntoBytes` is not satisfied
   --> $DIR/transmute-mut-dst-not-intobytes.rs:22:36
    |
 22 | const DST_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
    |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `IntoBytes` is not implemented for `Dst`
   --> $DIR/transmute-mut-dst-not-intobytes.rs:19:1
    |
 19 | struct Dst;
    | ^^^^^^^^^^
    = note: Consider adding `#[derive(IntoBytes)]` to `Dst`
    = help: the following other types implement trait `IntoBytes`:
              ()
              AtomicBool
              AtomicI16
              AtomicI32
              AtomicI64
              AtomicI8
              AtomicIsize
              AtomicU16
            and 68 others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
   --> $WORKSPACE/src/util/macro_util.rs:793:26
    |
790 |     pub fn transmute_mut(self) -> &'a mut Dst
    |            ------------- required by a bound in this associated function
...
793 |         Dst: FromBytes + IntoBytes,
    |                          ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::transmute_mut`
    = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
